    * 0210 FIX: LDAP: Fixed problem syncing contactgroups of a user with umlauts in CN
    * 0035 FIX: http[s] links are display again in the plugin output...
    * 0006 FIX: Checkboxes for hosts/services were missing on modified views...

    WATO:
    * 0053 New rule for configuring the display_name of a service...
    * 0216 Supporting float values as SNMP timeout value now...
    * 0048 FIX: Fixed locking issue on host diagnose page
    * 0033 FIX: Fixed problem when saving settings in WATOs host diagnostic page...
    * 0205 FIX: Allowing star chars in variable names to fix role/permission editing...
    * 0207 FIX: Explicit communities were not written to config files in all cases
    * 0094 FIX: Hide SNMPv3 credentials in WATO...
    * 0212 FIX: Fixed loading of sites with configured tcp socket in WATO
    * 0095 FIX: Fixed problem with portnumber in Wato Distributed Monitoring dialog
    * 0213 FIX: LDAP: Various small improvements for handling the LDAP user connector
    * 0039 FIX: Fixed exception on displaying WATO helptexts in the global settings...
    * 0219 FIX: Fixed display problems in WATO folders with long contact group names
    * 0220 FIX: Added HTML escaping to several global settings attributes...
    * 0234 FIX: Improved handling of interface inventory states / types...

    Notifications:
    * 0005 Added notification script for sending SMS via mobilant.com...
    * 0032 FIX: Fixed problem when forwarding notification mails in windows...
    * 0218 FIX: Fixed rendering of HTML mails for Outlook (at least 2013)...

    Reporting & Availability:
    * 0051 Option for showing timeline directly in availability table...
    * 0052 Visual colorization of availability according to levels...
    * 0054 New labelling options for availability table...
    * 0055 Allow grouping by host, host group or service group...
    * 0056 New concept of service periods in availability reporting...