@@ -49,6 +49,7 @@
     WATO:
     * 0053 New rule for configuring the display_name of a service...
     * 0216 Supporting float values as SNMP timeout value now...
+    * 0235 table headers are now omitted if all fields are empty and no table action is set
     * 0048 FIX: Fixed locking issue on host diagnose page
     * 0033 FIX: Fixed problem when saving settings in WATOs host diagnostic page...
     * 0205 FIX: Allowing star chars in variable names to fix role/permission editing...
